# valgebra

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  index.html  mkdocs.yml  mutants.toml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
algebra/: index.html
api/: index.html
benches/: bench_adversarial.py  bench_compare.py  bench_json.py  bench_validate.py
crates/valgebra-core/: Cargo.toml
crates/valgebra-core/benches/: core.rs
crates/valgebra-core/examples/: perf_workload.rs
crates/valgebra-core/proptest-regressions/: lib.txt
crates/valgebra-core/src/: decision.rs  ir.rs  lib.rs  simplify.rs  violation.rs
crates/valgebra-core/tests/: error_snapshots.rs
crates/valgebra-core/tests/snapshots/: error_snapshots__violation_message_format.snap
crates/valgebra-py/: Cargo.toml
crates/valgebra-py/examples/: binding_workload.rs
crates/valgebra-py/src/: build.rs  check.rs  errors.rs  input.rs  lib.rs  render.rs
crates/valgebra-py/src/check/: index.rs  violation.rs  walk.rs
docs/: algebra.md  api.md  decidability.md  error-model.md  foundations.md  index.md  installation.md  json.md  limits.md  performance.md  quickstart.md  recursion.md  refinements.md  schema-language.md  soundness.md  tutorial.md
error-model/: index.html
foundations/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decision.rs  simplify.rs
fuzz/seeds/decision/: seed-01d863c489bd0deabc83d60fc045138bd7752abe  seed-9740032c5f56abf2f8503297ffa0f8ec672df0b9  seed-d3054c004f96a955fc2cd811d731b93a7eb85a7e  seed-ed77d5f27e951e5650d8adfcf43fb5fe7816deda
fuzz/seeds/simplify/: seed-30548d33643b7fc5dcdc54327bce8dcca43a9684  seed-3f51a7d0281b3874f9683c6c396548eca4f21830  seed-4628ae8de65827125b870ae60dc77733efd89833  seed-581ba6d777d2d997b07cb85c7e3482f3b4202d81
fuzz/src/: lib.rs
installation/: index.html
json/: index.html
performance/: index.html
python/valgebra/: __init__.py  _derived.py  _markers.py  _valgebra.pyi
quickstart/: index.html
recursion/: index.html
refinements/: index.html
schema-language/: index.html
scripts/: compare_gate.py  mutation_baseline.json  mutation_gate.py  perf_budget.json  perf_compare.json  perf_gate.py  pgo_workload.py  run_doc_examples.py
search/: search_index.json
tests/: conftest.py  test_adversarial_bounds.py  test_annotations.py  test_classes.py  test_collections.py  test_combinators.py  test_completeness_ledger.py  test_concurrency.py  test_conditional.py  test_constraints.py  test_copy.py  test_coverage_edges.py  test_decision_adversarial.py  test_denotation.py  test_differential.py  test_equivalence.py  test_error_aggregation.py  test_error_codes.py  test_error_model.py  test_error_snapshots.py  test_fatal_signals.py  test_fixed_list.py  test_fixed_sequence.py  test_float_edges.py  test_heterogeneous_maps.py  test_json.py  test_json_semantics.py  test_laws.py  test_literals.py  test_metamorphic.py  test_mutation_gate.py  test_node_matrix.py  test_operators.py  test_pattern.py  test_prefix_tail.py  test_real_world_corpus.py  test_records.py  test_records_open.py  test_recursion.py  test_refinements.py  (+9 more)
tests/__snapshots__/: test_error_snapshots.ambr
tutorial/: index.html
