[workspace]
members = [
    "crates/valgebra-core",
    "crates/valgebra-py",
]
# Resolver 3 is the edition-2024 default and is MSRV-aware.
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
pyo3 = "0.28"
valgebra-core = { path = "crates/valgebra-core" }

# Lints configured once for the whole workspace; each crate opts in with
# `[lints] workspace = true`. CI runs `cargo clippy -- -D warnings`, so every
# warning below is a hard failure there.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

# Release-grade optimization with symbols retained, for profiling the hot path.
[profile.profiling]
inherits = "release"
strip = false
debug = true
