[workspace]
members = [
    "crates/valgebra-core",
    "crates/valgebra-py",
]
# Resolver 3 is the edition-2024 default and is MSRV-aware.
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Held at 0.28: the jiter JSON dependency (latest 0.15) requires pyo3 ^0.28.2, and
# two pyo3 versions cannot coexist in one extension module, so a bump to 0.29 is
# blocked until jiter ships a 0.29-compatible release. pyo3 0.29 also carries the
# free-threaded module-init fix the 3.14t CI lane needs; until then that lane fails
# at import and is kept non-blocking (see .github/workflows/ci.yml).
pyo3 = "0.28"
valgebra-core = { path = "crates/valgebra-core" }

# Lints configured once for the whole workspace; each crate opts in with
# `[lints] workspace = true`. CI runs `cargo clippy -- -D warnings`, so every
# warning below is a hard failure there.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Fast local iteration: the Rust side is debugged through the Python test suite,
# not a native debugger, so the default full debuginfo is build and link cost
# with no payoff. Dropping it cuts the clean workspace build by roughly eight
# percent and trims incremental rebuilds. The shipped wheel uses `release` and
# is unaffected; for a native debugging session, build under `profiling`.
[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

# Release-grade optimization with symbols retained, for profiling the hot path.
[profile.profiling]
inherits = "release"
strip = false
debug = true
