[workspace]
members = [
    "crates/valgebra-core",
    "crates/valgebra-py",
]
# Resolver 3 is the edition-2024 default and is MSRV-aware.
resolver = "3"

[workspace.package]
version = "0.0.3"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Keep one PyO3 version across the extension: jiter's `python` feature also
# depends on PyO3, and two PyO3 lines cannot coexist in one extension module.
pyo3 = "0.29"
# FxHash for the internal maps keyed by trusted, build-checked data (field names,
# pool ids), pinned once so both crates share one hasher version. Pure Rust, so
# the core crate stays interpreter-free while using it.
rustc-hash = "2.1"
valgebra-core = { path = "crates/valgebra-core" }

# Lints configured once for the whole workspace; each crate opts in with
# `[lints] workspace = true`. CI runs `cargo clippy -- -D warnings`, so every
# warning below is a hard failure there.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Fast local iteration: the Rust side is debugged through the Python test suite,
# not a native debugger, so the default full debuginfo is build and link cost
# with no payoff. Dropping it cuts the clean workspace build by roughly eight
# percent and trims incremental rebuilds. The shipped wheel uses `release` and
# is unaffected; for a native debugging session, build under `profiling`.
[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

# Release-grade optimization with symbols retained, for profiling the hot path.
[profile.profiling]
inherits = "release"
strip = false
debug = true
