[build-system]
# >= 1.9.4 injects the pyo3 extension-module behavior at build time, so it is
# not hard-coded as a Cargo feature (see crates/valgebra-py/Cargo.toml).
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "valgebra"
requires-python = ">=3.10"
dynamic = ["version"]
description = "Fast runtime validation via a complete Boolean algebra of schemas on a compiled Rust core."
readme = "README.md"
# PEP 639 SPDX expression; the standard Rust-ecosystem dual license.
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
keywords = ["validation", "schema", "typing", "rust"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "annotated-types>=0.7",
    "hypothesis>=6",
    "maturin>=1.9.4,<2",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.15.16",
    "syrupy>=5.3.2",
    "ty>=0.0.48",
]
# Benchmark-only tools: the wall-clock harness and the external comparison
# points. They are never runtime dependencies of valgebra.
bench = [
    "pytest-benchmark>=5",
    "pydantic>=2",
    "jsonschema>=4",
]
# Documentation-site tools: the MkDocs Material site and the mkdocstrings API
# reference generator. Never runtime dependencies.
#
# Upper bounds pin the renderer to the maintained MkDocs 1.x line: MkDocs core is
# unmaintained and the unlicensed "MkDocs 2.0" drops the plugin system with no
# migration path, so `<2` keeps the resolver off it, and `<10` holds Material on
# its last MkDocs-based major. The content is renderer-independent (Markdown in a
# Diataxis layout, examples tested by scripts/run_doc_examples.py, an llms.txt
# manifest); the renderer is a replaceable backend. Drop the bounds when migrating
# to Zensical, once it renders mkdocstrings cross-references and llms.txt.
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=1.0.4",
    # Generates the /llms.txt manifest and /llms-full.txt full-content export so
    # AI assistants and coding agents consume the docs as clean Markdown.
    "mkdocs-llmstxt>=0.5",
]

[tool.maturin]
python-source = "python"
module-name = "valgebra._valgebra"
manifest-path = "crates/valgebra-py/Cargo.toml"
# Build the abi3-incompatible per-version module; strip the binary in release.
strip = true
# Profile-guided-optimization training workload for `maturin build --pgo`
# (release lane only). Runs against the instrumented build to record a profile
# over a broad, production-like spread of validation shapes; depends only on the
# package itself, so it runs in the minimal environment maturin provisions.
pgo-command = "python scripts/pgo_workload.py"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true

[tool.ruff]
target-version = "py310"
src = ["python", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter conflicts, per the ruff docs.
    "COM812",
    "ISC001",
    # Missing docstrings — added incrementally as the public surface stabilises.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    # Docstring style pairs that contradict each other; keep the ruff defaults.
    "D203",
    "D213",
    # Public-surface annotations live in the .pyi stub, not the runtime module.
    "ANN",
]

[tool.ruff.lint.per-file-ignores]
# Tests assert freely, use magic values, take unused fixture args, are not a
# package, pass bools positionally, raise ad-hoc exceptions with inline
# messages, and carry descriptive (not commented-out) comments in data tables.
"tests/**" = [
    "S101",
    "PLR2004",
    "ARG001",
    "INP001",
    "FBT003",
    "EM101",
    "TRY003",
    "ERA001",
]
# Benchmarks assert results, use magic sizes, are not a package, and print
# their own recorded numbers when run as scripts.
"benches/**" = ["S101", "PLR2004", "INP001", "T201"]
# Maintenance scripts run subprocesses (tools resolved from PATH) and print
# progress.
"scripts/**" = ["INP001", "S603", "S607", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["valgebra"]

[tool.coverage.run]
# Measure the Python package surface. The compiled extension is Rust, measured
# separately by the binding-coverage lane (cargo-llvm-cov); branch coverage
# catches a half-taken conditional the line count would miss.
source = ["valgebra"]
branch = true

[tool.coverage.report]
# The Python surface is thin and fully exercised, so the gate is a hard 100%; a
# regression that leaves a line or branch untested fails the lane rather than
# silently eroding the number.
fail_under = 100
show_missing = true
exclude_also = ["if TYPE_CHECKING:"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
# Benchmarks and the differential suite are separate measurement harnesses, not
# the typed public surface; they import the optional bench dependency group
# (pydantic, jsonschema), which is absent in the type-check lane.
exclude = ["benches", "tests/test_differential.py", "scripts/compare_gate.py"]
