[package]
name = "valgebra-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "_valgebra"
crate-type = ["cdylib", "rlib"]

[dependencies]
# The pyo3 `extension-module` feature is intentionally not set here. maturin
# (>= 1.9.4) injects it at wheel-build time via PYO3_BUILD_EXTENSION_MODULE.
# Setting it unconditionally leaves libpython symbols undefined, which links on
# Linux but breaks `cargo test`/`cargo build` on macOS and Windows, whose
# linkers reject undefined symbols. Omitting it lets non-maturin builds link
# libpython normally.
pyo3 = { workspace = true }
valgebra-core = { workspace = true }
# JSON ingestion on the Rust path: jiter parses straight into Python objects,
# faster than the stdlib json module, and the parsed value runs the same
# validation walk as a native object so the two paths agree by construction.
jiter = { version = "0.15", features = ["python"] }
# The validation walk's maps and the recursion guard are keyed by trusted
# internal data (declared field names, value/definition ids), never attacker
# input, so they do not need SipHash's DoS resistance. FxHash is faster to build
# and probe, and its zero-sized build hasher drops the per-call random-seed setup
# the default hasher pays on every walk. This is the hasher ty uses for the same
# reason.
rustc-hash = "2"
# Native string-pattern refinements: the `regex` crate compiles a `Pattern(...)`
# marker once and matches on the Rust path, off the Python-predicate slow path.
# Its linear-time guarantee (no catastrophic backtracking) matches valgebra's
# stance that constructed sequence regexes are linear, and pydantic-core uses it
# for the same `pattern` constraint.
regex = "1"

[lints]
workspace = true
